--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-primer
 title: Shantanu Kumar
 description: Developer profile
-url: https://kumarshantanu.github.io/
+url: https://kumarshantanu.github.io
 timezone: Asia/Kolkata
